syntax = "proto3";

package Protobuf;

message Map {
  Pos2D dimensions = 1;
  repeated Line obstacles = 2;
}

message Line {
    Pos2D a = 1;
    Pos2D b = 2;
}

message Pos2D {
    float x = 1;
    float y = 2;
}

message Boid {
  Pos2D position = 1;
  Pos2D direction = 2;
}

message Flock {
    repeated Boid boids = 1; // max 1000
}

message Input {
    Map map = 1;
    Flock flock = 2;
    int32 simulationDurationSec = 3; // max 10
    int32 imagesPerSecond = 4; // max 60
}

message Simulation {
    Flock flock = 1;
    float elapsedTimeSecond = 2;
}

message Output {
    repeated Simulation simulations = 1;
}
